tests/ui/register_on_struct.stderr
error: expected `fn`
 --> tests/ui/register_on_struct.rs:4:1
  |
4 | struct NotAFunction;
  | ^^^^^^
