tests/ui/register_on_struct.rs
use rust_buildkite::register;

#[register]
struct NotAFunction;

fn main() {}
